# TelegramMusicBotCpp

./: .gitignore  .travis.yml  CMakeLists.txt  INSTALL.md  README.md  RequestManager.cpp  RequestManager.hpp  json_functions.cpp  main.cpp  main.cpp.bak
include/: file.json  functions.hpp
tests/: init.cpp
tgbot-cpp/samples/echobot/: Dockerfile
